parser/tests/bad/stmt08.st
% references in 'get' statement cannot have type 'array'

var arr: array 1..2 of array 1..2 of int
get arr[1]
